# HyprWin

./: .gitignore  CMakeLists.txt  README.md  hyprctl.ps1
core/: CMakeLists.txt
core/include/: alttab.hpp  renderer.hpp
core/src/: alttab.cpp  main.cpp  renderer.cpp
scripting/: main.lua
scripts/: hl_shim.lua  main.lua
scripts/ui/: alttab.lua  control_center.lua  launcher.lua  topbar.lua
testcfg/.hyprwin/: hyprland.lua
testcfg/.hyprwin/hyprland_modules/: Decorations.lua  Generals.lua  Input.lua  Keybinds.lua  Misc.lua  Monitors.lua  Rules.lua
testcfg/.hyprwin/hyprlock_themes/: hyprlock_1.conf
